--- a/src/app/race-year/race-year.component.html
+++ b/src/app/race-year/race-year.component.html
@@ -21,6 +21,6 @@
 </div>
 <div class="footer" *ngIf="isResultsLoaded">
 	<div class="footer-wrapper">
-		<pagination-controls class="pagination" (pageChange)="p=$event"></pagination-controls>
+		<div class="paging"><pagination-controls class="pagination" (pageChange)="p=$event"></pagination-controls></div>
 	</div>
 </div>
