--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--Main HTML-->
 <div>
 	<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <img src="https://www.mobiquityinc.com/hs-fs/hubfs/si-images/global/Mobiquity-Logo.png?t=1527173585576&width=219&name=Mobiquity-Logo.png">
+		<img src="https://www.mobiquityinc.com/hs-fs/hubfs/si-images/global/Mobiquity-Logo.png?t=1527173585576&width=219&name=Mobiquity-Logo.png">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -21,6 +21,7 @@
           </li>
         </ul>
       </div>
+	  <div></div>
     </nav>
 </div>
 <router-outlet></router-outlet>
