Fix for missing toaster

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
 /* Import Bootstrap.css from library*/
-@import "~bootstrap/dist/css/bootstrap.css"
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~ngx-toastr/toastr.css";
 
