Fix responsive table

--- a/src/app/race-year/race-year.component.html
+++ b/src/app/race-year/race-year.component.html
@@ -1,8 +1,8 @@
 <!-- Race Year page to be inserted in the Main HTML-->
 <div toastContainer></div>
 <div align="center">
-	<div style="width:95%">
-		<table class="table" id="md-table">
+	<div style="width:95%" class="table-responsive">
+		<table class="table">
 		  <tr>
 			<th *ngFor="let header of raceResultHeader">
 			  {{header | uppercase}}
