--- a/src/app/race-year/race-year.component.html
+++ b/src/app/race-year/race-year.component.html
@@ -1,6 +1,6 @@
 <!-- Race Year page to be inserted in the Main HTML-->
 <div toastContainer></div>
-<div align="center">
+<div align="center" class="tableWrapper">
 	<div style="width:95%" class="table-responsive">
 		<table class="table">
 		  <tr>
