--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!--Main HTML-->
-<div>
+<div class="navWrapper">
 	<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-		<img src="https://www.mobiquityinc.com/hs-fs/hubfs/si-images/global/Mobiquity-Logo.png?t=1527173585576&width=219&name=Mobiquity-Logo.png">
+		<div style="width:calc(100% - 56px)">
+			<img src="https://www.mobiquityinc.com/hs-fs/hubfs/si-images/global/Mobiquity-Logo.png?t=1527173585576&width=219&name=Mobiquity-Logo.png" >
+		</div>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
